# uni-compiler-project

./: .gitignore  .indent.pro  Makefile.am  README.md  configure.ac  configure~
src/: MIXAL.c  export.c  main.c  parser.c  parser.y  scanner.c  scanner.l  tac.c  types.h
test/: test1  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test2  test3  test4  test5  test6  test7  test8  test9
